# pr-narrator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  commitlint.config.mjs  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: commit-lint.yml  release.yml  test.yml
docs/superpowers/plans/: 2026-05-01-pr-narrator-scaffold.md
docs/superpowers/specs/: 2026-05-01-pr-narrator-scaffold-design.md
src/pr_narrator/: __init__.py  cli.py  compressor.py  diff.py  discovery.py  errors.py  github.py  parser.py  prompts.py  redactor.py  synthesizer.py
tests/: test_cli.py  test_compressor.py  test_diff.py  test_discovery.py  test_github.py  test_parser.py  test_prompts.py  test_redactor.py  test_synthesizer.py  test_version.py
tests/fixtures/: sample_session.jsonl
