[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pr-narrator"
version = "0.1.0"
description = "Turn long Claude Code sessions into reviewer-ready pull request descriptions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Nagendra Dhanakeerthi", email = "nagendra.dhanakeerthi@gmail.com" }]
keywords = ["claude", "claude-code", "pull-request", "cli", "code-review"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
  "click>=8.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "commitizen>=3.29",
  "pre-commit>=3.7",
]

[project.scripts]
pr-narrator = "pr_narrator.cli:main"

[project.urls]
Homepage = "https://github.com/nagstler/pr-narrator"
Repository = "https://github.com/nagstler/pr-narrator"
Issues = "https://github.com/nagstler/pr-narrator/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pr_narrator"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/pr_narrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=pr_narrator --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["pr_narrator"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true
